--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
       .swiper-main {
         width: 100%;
         /* height: 700px; */
-        touch-action: pan-x;
+        touch-action: pan-y;
       }
 
       .swiper-pagination-bullet .date-text {
